Fix form validation errors alignment

--- a/wp-content/themes/larahart/main.less
+++ b/wp-content/themes/larahart/main.less
@@ -138,13 +138,10 @@ body {
   }
   span.wpcf7-not-valid-tip {
     top: 0;
-    left: 255px;
+    left: 357px;
     width: auto;
     border: none;
     color: red;
-  }
-  .your-message span.wpcf7-not-valid-tip {
-    left: 357px;
   }
   span.wpcf7-form-control-wrap {
     display: block;
